--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   provider: ^2.0.1
   fluttertoast: ^8.0.3
   location: ^4.1.1
+  random_color: ^1.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
